# bili-assetizer

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  SPEC.md  pyproject.toml
.claude/: settings.local.json
app/src/bili_assetizer/: __init__.py  cli.py
app/src/bili_assetizer/api/: __init__.py
app/src/bili_assetizer/core/: __init__.py  bilibili_client.py  clean_service.py  config.py  db.py  evidence_service.py  exceptions.py  extract_frames_service.py  extract_ocr_service.py  extract_pipeline_service.py  extract_select_service.py  extract_source_service.py  extract_timeline_service.py  extract_transcript_service.py  index_service.py  ingest_service.py  manifest_utils.py  (+6 more)
app/tests/: __init__.py  conftest.py  test_bilibili_client.py  test_clean_service.py  test_cli.py  test_config.py  test_db.py  test_evidence_service.py  test_extract_frames_cli.py  test_extract_frames_service.py  test_extract_ocr_cli.py  test_extract_ocr_service.py  test_extract_pipeline_cli.py  test_extract_pipeline_service.py  test_extract_select_cli.py  test_extract_select_service.py  test_extract_source_cli.py  test_extract_source_service.py  test_extract_timeline_cli.py  test_extract_timeline_service.py  test_extract_transcript_cli.py  test_extract_transcript_service.py  test_index_cli.py  test_index_service.py  test_ingest_service.py  test_models.py  test_ocr_normalize_cli.py  test_ocr_normalize_service.py  test_query_cli.py  test_query_service.py  test_text_utils.py  test_url_parser.py
prompts/: frame_caption.md  render_illustrated_summary.md  render_quiz.md
