[project]
name = "bili-assetizer"
version = "0.1.0"
description = "Convert Bilibili videos into queryable multimodal knowledge assets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = ["pytest>=8.0.0"]

[project.scripts]
bili-assetizer = "bili_assetizer.cli:app"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app/src/bili_assetizer"]
